<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/chapter_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/method_overloading_layout"
        android:background="@drawable/card_background"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/method_overloading_title_layout"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/chapter_caret"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/right_caret"/>

            <TextView
                android:id="@+id/chapter_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/method_overloading"
                android:paddingStart="10dp"
                android:textSize="18sp"
                android:textStyle="bold"/>


        </LinearLayout>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:padding="10dp"
            android:text="@string/what_is_method_overloading"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/method_overloading_definition"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:padding="10dp"
            android:text="@string/why_is_this_important"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/method_overload_importance"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:padding="10dp"
            android:text="@string/uses"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/method_overload_uses"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:padding="10dp"
            android:text="Examples"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/method_overload_examples"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:padding="10dp"
            android:text="@string/not_examples"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/method_overloading_not_examples"/>

        <LinearLayout
            android:id="@+id/section_five_challenges_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:id="@+id/challenges"
                android:textSize="16sp"
                android:padding="10dp"
                android:text="@string/challenges"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/method_overloading_challenge"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:padding="10dp"
                android:text="@string/test_it_yourself"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/method_overloading_try_yourself_instructions"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/method_overloading_feet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textSize="16sp"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:hint="feet"/>

                <EditText
                    android:id="@+id/method_overloading_challenge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:textSize="16sp"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:hint="inches"/>

                <TextView
                    android:id="@+id/method_overloading_challenge_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingStart="20dp"
                    android:textSize="16sp"
                    android:text="0"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>